--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,20 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
     ext {
         version_navigation = '1.0.0'
+        version_core = "1.0.1"
+        version_coroutine = "1.1.0"
+        version_constraint_layout = "1.1.3"
+        version_gradle = '3.5.0'
+        version_kotlin = "1.3.21"
+        version_lifecycle_extensions = "2.0.0"
+        version_navigation = '1.0.0-beta02'
+        version_room = "2.0.0"
     }
 }
 
