--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,23 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
+    ext {
+        version_core = "1.0.1"
+        version_coroutine = "1.1.0"
+        version_navigation = '1.0.0'
+        version_constraint_layout = "2.0.0-alpha3"
+        version_gradle = '3.5.3'
+        version_kotlin = "1.3.21"
+        version_lifecycle_extensions = "2.0.0"
+        version_room = "2.0.0"
+        version_appcompat = "1.0.2"
+        version_fragment = "1.0.0"
+    }
+
     ext.kotlin_version = '1.3.41'
+    ext.version_navigation = '1.0.0'
+    ext.version_gradle = '3.5.3'
+
     repositories {
         google()
         jcenter()
@@ -10,20 +26,10 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.5.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "android.arch.navigation:navigation-safe-args-gradle-plugin:$version_navigation"
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
-    }
-    ext {
-        version_navigation = '1.0.0'
-        version_core = "1.0.1"
-        version_coroutine = "1.1.0"
-        version_constraint_layout = "1.1.3"
-        version_gradle = '3.5.0'
-        version_kotlin = "1.3.21"
-        version_lifecycle_extensions = "2.0.0"
-        version_navigation = '1.0.0-beta02'
-        version_room = "2.0.0"
     }
 }
 
