--- a/app/build.gradle
+++ b/app/build.gradle
@@ -60,4 +60,5 @@ dependencies {
 
     // Material dependencies
     implementation "com.google.android.material:material:1.0.0"
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
 }
